refactored code and changed TestHelper